--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -2,6 +2,9 @@
   "filters": {
     "comments": true
   },
+  "plugins": [
+    "ignore-comments"
+  ],
   "rules": {
     "apostrophe": true,
     "doubled-spaces": true,
