--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "textlint-rule-sentence-length": "^5.0.0",
     "textlint-rule-terminology": "^5.1.8",
     "textlint-rule-use-si-units": "^2.0.0"
+  },
+  "dependencies": {
+    "textlint-rule-ignore-comments": "^1.1.0"
   }
 }
