--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme 
-title: 職務経歴書
+title: 齊藤茂紀の職務経歴書
 description: 職務経歴書アップロード用のページです。
