--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -28,11 +28,15 @@
     },
     "ja-unnatural-alphabet": true,
     "max-comma": {
-      "max" : 4
+      "max": 4
     },
     "max-kanji-continuous-len": {
       "max": 6,
-      "allow": ["普通自動車第一種運転免許", "日本郵便株式会社"]
+      "allow": [
+        "普通自動車第一種運転免許",
+        "日本郵便株式会社",
+        "電気通信大学電気通信学部"
+      ]
     },
     "max-ten": true,
     "no-doubled-conjunction": true,
@@ -46,7 +50,12 @@
     "prefer-tari-tari": true,
     "rousseau": {
       "showLevels": ["suggestion", "warning", "error"],
-      "ignoreTypes": ["adverbs", "readibility", "sentence:start", "sentence:uppercase"]
+      "ignoreTypes": [
+        "adverbs",
+        "readibility",
+        "sentence:start",
+        "sentence:uppercase"
+      ]
     },
     "sentence-length": {
       "max": 150
